--- a/VideoGameLibraryiOS/Storyboards/AddNewStoryboard.storyboard
+++ b/VideoGameLibraryiOS/Storyboards/AddNewStoryboard.storyboard
@@ -17,60 +17,66 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="OTS-nQ-Mcq">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="OTS-nQ-Mcq">
                                 <rect key="frame" x="5" y="64" width="365" height="603"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8DL-LB-Asd">
-                                        <rect key="frame" x="0.0" y="0.0" width="365" height="58"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="365" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Al8-U6-klC">
-                                        <rect key="frame" x="0.0" y="78" width="365" height="58"/>
+                                        <rect key="frame" x="0.0" y="40.5" width="365" height="79"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QnC-NB-OD0">
-                                        <rect key="frame" x="0.0" y="156" width="365" height="57.5"/>
+                                        <rect key="frame" x="0.0" y="139.5" width="365" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="P8k-rl-FsJ">
-                                        <rect key="frame" x="0.0" y="233.5" width="365" height="58"/>
+                                        <rect key="frame" x="0.0" y="180" width="365" height="58"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vyb-VJ-SpB">
-                                        <rect key="frame" x="0.0" y="311.5" width="365" height="58"/>
+                                        <rect key="frame" x="0.0" y="258" width="365" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="20a-b3-Kw0">
-                                        <rect key="frame" x="0.0" y="389.5" width="365" height="59"/>
+                                        <rect key="frame" x="0.0" y="298.5" width="365" height="29"/>
                                         <segments>
-                                            <segment title="First"/>
-                                            <segment title="Second"/>
+                                            <segment title="E"/>
+                                            <segment title="E10+"/>
+                                            <segment title="T"/>
+                                            <segment title="M"/>
+                                            <segment title="Ao"/>
                                         </segments>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a3T-iZ-2xc">
-                                        <rect key="frame" x="0.0" y="467.5" width="365" height="57.5"/>
+                                        <rect key="frame" x="0.0" y="346.5" width="365" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZHI-A7-Joc">
-                                        <rect key="frame" x="0.0" y="545" width="365" height="58"/>
+                                        <rect key="frame" x="0.0" y="387" width="365" height="216"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="Ymk-IS-uOn" id="33x-Cc-uBg"/>
+                                            <outlet property="delegate" destination="Ymk-IS-uOn" id="8io-It-Ic5"/>
+                                        </connections>
                                     </pickerView>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="OTS-nQ-Mcq" secondAttribute="trailing" constant="5" id="559-X8-SMG"/>
                             <constraint firstItem="OTS-nQ-Mcq" firstAttribute="leading" secondItem="ksS-GL-86E" secondAttribute="leading" constant="5" id="JNj-iz-SfF"/>
@@ -88,6 +94,10 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="gameDescriptionTextView" destination="P8k-rl-FsJ" id="RK3-AI-Ua5"/>
+                        <outlet property="gameGenrePicker" destination="ZHI-A7-Joc" id="slN-ba-iyc"/>
+                        <outlet property="gameRatingSegmentedControl" destination="20a-b3-Kw0" id="89h-9t-v59"/>
+                        <outlet property="gameTitleTextField" destination="Al8-U6-klC" id="OPR-bj-lHA"/>
                         <segue destination="m6d-2i-BgJ" kind="unwind" identifier="unwindToGameListWithSegue" unwindAction="unwindToGameListWithSegue:" id="Ptv-6t-nYu"/>
                     </connections>
                 </viewController>
