--- a/VideoGameLibraryiOS/Storyboards/EditGame.storyboard
+++ b/VideoGameLibraryiOS/Storyboards/EditGame.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JyM-TR-kuS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UL2-BT-Itc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,74 +9,102 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Edit Game-->
-        <scene sceneID="FQt-3N-94J">
+        <!--Add New Game-->
+        <scene sceneID="GGk-ru-23d">
             <objects>
-                <viewController id="JyM-TR-kuS" customClass="EditGameViewController" customModule="VideoGameLibraryiOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="kE2-cP-zfa">
+                <viewController title="Add New Game" id="UL2-BT-Itc" customClass="EditGameViewController" customModule="VideoGameLibraryiOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rt8-0y-XiQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yva-DU-wAg">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="d3l-KZ-mfc">
                                 <rect key="frame" x="5" y="64" width="365" height="603"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2QS-Vu-oS1">
-                                        <rect key="frame" x="0.0" y="0.0" width="365" height="100.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVW-Ti-NYn">
+                                        <rect key="frame" x="0.0" y="0.0" width="365" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pKL-ic-tWx">
-                                        <rect key="frame" x="0.0" y="100.5" width="365" height="100.5"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mPr-bz-s12">
+                                        <rect key="frame" x="0.0" y="40.5" width="365" height="79"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k0p-rC-jEf">
-                                        <rect key="frame" x="0.0" y="201" width="365" height="100.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y3A-gj-jP8">
+                                        <rect key="frame" x="0.0" y="139.5" width="365" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="j4e-JP-1DH">
-                                        <rect key="frame" x="0.0" y="301.5" width="365" height="100.5"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WlC-yJ-T9t">
+                                        <rect key="frame" x="0.0" y="180" width="365" height="58"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gee-gU-NHJ">
-                                        <rect key="frame" x="0.0" y="402" width="365" height="100.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wku-Z9-LD6">
+                                        <rect key="frame" x="0.0" y="258" width="365" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQD-NZ-pV1">
-                                        <rect key="frame" x="0.0" y="502.5" width="365" height="100.5"/>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="aoC-0x-ESI">
+                                        <rect key="frame" x="0.0" y="298.5" width="365" height="29"/>
+                                        <segments>
+                                            <segment title="E"/>
+                                            <segment title="E10+"/>
+                                            <segment title="T"/>
+                                            <segment title="M"/>
+                                            <segment title="Ao"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aqd-3R-cPq">
+                                        <rect key="frame" x="0.0" y="346.5" width="365" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gak-JH-1ID">
+                                        <rect key="frame" x="0.0" y="387" width="365" height="216"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="UL2-BT-Itc" id="FVY-ju-8gO"/>
+                                            <outlet property="delegate" destination="UL2-BT-Itc" id="DOv-uU-T7c"/>
+                                        </connections>
+                                    </pickerView>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="yva-DU-wAg" firstAttribute="top" secondItem="gMb-jR-lN0" secondAttribute="top" id="Cke-S0-Zea"/>
-                            <constraint firstItem="gMb-jR-lN0" firstAttribute="bottom" secondItem="yva-DU-wAg" secondAttribute="bottom" id="kRL-47-fSl"/>
-                            <constraint firstItem="gMb-jR-lN0" firstAttribute="trailing" secondItem="yva-DU-wAg" secondAttribute="trailing" constant="5" id="t9A-cp-kHr"/>
-                            <constraint firstItem="yva-DU-wAg" firstAttribute="leading" secondItem="gMb-jR-lN0" secondAttribute="leading" constant="5" id="wFu-mq-HZy"/>
+                            <constraint firstItem="d3l-KZ-mfc" firstAttribute="leading" secondItem="VuA-uS-BrX" secondAttribute="leading" constant="5" id="9Cv-WA-Y9m"/>
+                            <constraint firstItem="d3l-KZ-mfc" firstAttribute="top" secondItem="VuA-uS-BrX" secondAttribute="top" id="g9H-sU-Izu"/>
+                            <constraint firstItem="VuA-uS-BrX" firstAttribute="bottom" secondItem="d3l-KZ-mfc" secondAttribute="bottom" id="hqD-Hg-CU7"/>
+                            <constraint firstAttribute="trailing" secondItem="d3l-KZ-mfc" secondAttribute="trailing" constant="5" id="oV3-Mp-VvN"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="gMb-jR-lN0"/>
+                        <viewLayoutGuide key="safeArea" id="VuA-uS-BrX"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Edit Game" id="fF7-Cb-kDu">
-                        <barButtonItem key="rightBarButtonItem" title="Submit" id="zo9-eE-Rwm"/>
+                    <navigationItem key="navigationItem" title="Edit Game" id="Wby-rd-iwb">
+                        <barButtonItem key="rightBarButtonItem" title="Submit" id="pLF-HU-CmK">
+                            <connections>
+                                <action selector="submitButtonTapped:" destination="UL2-BT-Itc" id="jxb-5z-jen"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="gameDescriptionTextView" destination="WlC-yJ-T9t" id="bYP-D0-3eH"/>
+                        <outlet property="gameGenrePicker" destination="Gak-JH-1ID" id="4zr-8d-yo3"/>
+                        <outlet property="gameRatingSegmentedControl" destination="aoC-0x-ESI" id="boV-PG-Yda"/>
+                        <outlet property="gameTitleTextField" destination="mPr-bz-s12" id="NGs-2a-0c7"/>
+                        <segue destination="HCP-h5-do6" kind="unwind" identifier="unwindToGameListWithSegue" unwindAction="unwindToGameListWithSegue:" id="Gwv-pg-N4R"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hQd-aI-fmX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BRh-3d-P0u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="HCP-h5-do6" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="65" y="-9"/>
+            <point key="canvasLocation" x="-498" y="-18"/>
         </scene>
     </scenes>
 </document>
